--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,19 +2,19 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 <item
-    android:id="@+id/page_1"
+    android:id="@+id/home_m"
     android:enabled="true"
     android:icon="@drawable/ic_home"
     android:title="@string/Home"/>
 <item
-    android:id="@+id/page_2"
+    android:id="@+id/account_m"
     android:enabled="true"
     android:icon="@drawable/ic_account_circle"
     android:title="@string/Account"/>
 
 
     <item
-        android:id="@+id/page_5"
+        android:id="@+id/support_m"
         android:enabled="true"
         android:icon="@drawable/ic_support"
         android:title="@string/Support"/>
